fix: login modal spacing

--- a/frontend/src/app/core/register-or-login-modal/register-or-login-modal.component.scss
+++ b/frontend/src/app/core/register-or-login-modal/register-or-login-modal.component.scss
@@ -4,9 +4,7 @@
 .auth-modal {
   .header {
     background-color: $blue-light;
-    margin: 0 -2.4rem -2.4rem -2.4rem;
-    padding: 2.4rem;
-    margin-bottom: 2.4rem;
+    padding: 2.4rem 4rem;
     display: grid;
     gap: $spacing-2;
     position: relative;
@@ -24,6 +22,7 @@
     width: 100%;
     display: grid;
     gap: $spacing-2;
+    padding: $spacing-8 $spacing-10;
     .login-btn {
       width: 100%;
     }
